# console

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
config/: owner_endpoints.v1.json
deploy/systemd/: amber-console.service  guardian-public-site.service
docs/: epic26-bus-only-visual-slice-2026-06-01.md  runtime-contract.md
native/src/: console_service.cpp  main.cpp  (+4 more)
public-site/: index.html  styles.css
scripts/: serve-public-site.mjs
tests/: actorr_client_bootstrap_regression.mjs  actorr_media_client_soak_regression.mjs  background_logger_fast_path_regression.mjs  bus_raw_catalog_regression.mjs  console_soak_regression.mjs  gemma_fast_lane_intent_regression.mjs  global_action_lock_regression.mjs  guardian_c2_fault_chain_regression.mjs  guardian_lawn_boundary_lock_regression.mjs  ha_evidence_readonly_regression.mjs  logger_incident_stream_regression.mjs  logger_programme_evidence_proof_regression.mjs  logger_request_proof_depth_regression.mjs  lsb_recovery_regression.mjs  memorr_evidence_lineage_regression.mjs  owner_action_readiness_regression.mjs  owner_retirement_compare_regression.mjs  perimeter_media_contract_block_regression.mjs  promotion_gate_regression.mjs  smoke_console.sh  smoke_console_browser.mjs  source_logger_call_evidence_regression.mjs  source_reliability_regression.mjs  stream_reconnect_regression.mjs  veliai_memory_boundary_regression.mjs  veliai_queue_summary_regression.mjs  veliai_route_drift_regression.mjs  veliai_route_soak_ledger_regression.mjs  windows_runtime_handoff_regression.mjs
web/: index.html  package-lock.json  package.json
(+74 files in other folders)
